fix shifting of position

--- a/dboard-web/src/components/common/sidebar/Sidebar.scss
+++ b/dboard-web/src/components/common/sidebar/Sidebar.scss
@@ -17,6 +17,7 @@
 
 .sidebar-container {
     max-width:  4.8em;
+    transition: max-width .4s ease-in;
 }
 
 .sidebar-container-wide {
@@ -25,6 +26,7 @@
 
 .profile {
     width: 100%;
+    height: 5rem;
     display: grid;
     grid-template-areas:
         "profile-img profile-title"
